--- a/src/views/add_recipe.ejs
+++ b/src/views/add_recipe.ejs
@@ -163,8 +163,8 @@
                     </div>
                     <div class="font chocolate-brown flex-column gap-20" id="ingredients">
                         <div class="flex-row gap-20">
-                            <input class="width-50px" type="number" placeholder="1" min="1" required>
-                            <input class="width-70" type="text" placeholder="Ingrediente" maxlength="255" required>
+                            <input name="ingredient_weight" class="width-50px" type="number" placeholder="1" min="1" required>
+                            <input name="ingredient_description" class="width-70" type="text" placeholder="Ingrediente" maxlength="255" required>
                         </div>
                     </div>
                     <div>
@@ -180,8 +180,8 @@
                     </div>
                     <div class="font chocolate-brown flex-column gap-20" id="steps">
                         <div class="flex-row gap-20">
-                            <input class="width-50px" type="number" placeholder="1" min="1" required>
-                            <textarea name="" id="" class="font" placeholder="Passo" required></textarea>
+                            <input name="step_weight" class="width-50px" type="number" placeholder="1" min="1" required>
+                            <textarea name="step_description" id="" class="font" placeholder="Passo" required></textarea>
                         </div>
                     </div>
                     <div>
