--- a/public/css/home_style.css
+++ b/public/css/home_style.css
@@ -9,6 +9,10 @@ main {
     min-height: 100vh;
 }
 
+.recipe-page {
+    background-color: white;
+}
+
 .section {
     display: flex;
     flex-direction: row;
