--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -80,15 +80,15 @@
                     </div>
                 </div>
 
-                <div class="box flex-row gap-50">
-                    <a class="flex-column center hover" href="/<%= this_user.username %>/calendar">
+                <div class="box flex-row gap-50 ">
+                    <a class="flex-column center hover decoration-brown" href="/<%= this_user.username %>/calendar">
                         <img src="/img/calendar-icon.png" alt="">
-                        <span class="font chocolate-brown small bold">Calendário</span>
+                        <span class="font chocolate-brown small bold ">Calendário</span>
                     </a>
-                    <div class="flex-column center hover">
+                    <a class="flex-column center hover decoration-brown">
                         <img class="icon-color" src="/img/users-icon.png" alt="">
-                        <a class="font chocolate-brown small bold" href="">Comunidade</a>
-                    </div>
+                        <span class="font chocolate-brown small bold" href="">Comunidade</span>
+                    </a>
                 </div>
 
                 <div class="box gap">
@@ -112,7 +112,7 @@
             </aside>
             <article>
                 <% user_recipes.forEach(recipe => { %>
-                    <div class="recipe box hover smallerhover">
+                    <a href="/<%= this_user.username %>/view-recipes-<%= recipe.id_recipe %>" class="recipe box hover smallerhover no-decoration">
                         <img class="recipe-img" src="<%= recipe.image %>">
                         <div class="recipe-text">
                             <span class="font chocolate-brown superbold"><%= recipe.name %></span>
@@ -131,7 +131,7 @@
                                 <button class="hover"><img src="/img/star-icon.png" alt=""></button>
                             </div>
                         </div>
-                    </div>
+                    </a>
                 <% }) %>
             </article>
         </div>
