--- a/src/views/view_recipes.ejs
+++ b/src/views/view_recipes.ejs
@@ -23,8 +23,10 @@
     <link rel="stylesheet" type="text/css" href="/css/sign_style.css">
 
     <link rel="stylesheet" type="text/css" href="/css/style.css">
+    <link rel="stylesheet" type="text/css" href="/css/header_style.css">
+    <link rel="stylesheet" type="text/css" href="/css/recipe_style.css">
 
-    <title>Receita</title>
+    <title><%= this_recipe.name %></title>
 </head>
 
 <body>
@@ -32,7 +34,8 @@
         <nav class="header navbar navbar-expand-lg">
             <div class="container-fluid padding-zero">
                 <div class="menu">
-                    <a class="padding-zero margin-zero" href="/home"><img src="/img/logo-white-green.png" class="logo-icon"></a>
+                    <a class="padding-zero margin-zero hover" href="/<%= this_user.username %>/home"><img src="/img/logo-white-green.png"
+                            class="logo-icon"></a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                         data-bs-target="#navbarContent" aria-controls="navbarContent" aria-expanded="false"
                         aria-label="Toggle navigation">
@@ -40,13 +43,13 @@
                     </button>
                 </div>
                 <span class="center">
-                    <div class="collapse navbar-collapse center" id="navbarContent" style="">
+                    <div class="collapse navbar-collapse center" id="navbarContent">
                         <ul class="flex-row gap-20 padding-zero margin-zero">
                             <li class="center">
-                                <a class="font chocolate-brown superbold no-decoration" href="/"><span>Sair</span></a>
+                                <a class="font chocolate-brown superbold no-decoration hover" href="/"><span>Sair</span></a>
                             </li>
                             <li class="center">
-                                <img src="img/icon-dark-mode-black.png">
+                                <img class="hover" id="dark_mode_icon" src="/img/icon-dark-mode-0.png">
                             </li>
                         </ul>
                     </div>
@@ -58,71 +61,69 @@
         <div class="recipes-box gap-40">
             <div class="view-recipes-top">
                 <div class="view-recipes-header flex-column gap-30">
-                    <div class="header-info flex-row gap-30">
-                        <img class="view-recipes-profile-img rounded-circle" src="img/maria-c.jpg">
+                    <div class="header-info flex-row gap-20">
+                        <img class="view-recipes-profile-img rounded-circle" src="<%= this_user.image %>">
                         <div class="flex-column">
                             <div class="view-recipes-username flex-row gap-10 flex-wrap">
-                                <span class="font chocolate-brown bold big">Maria Carolina Bevervanso </span>
-                                <span class="font yellow bold">@Mariasina</span>
+                                <span class="font chocolate-brown superbold big"><%= this_user.name %></span>
+                                <span class="font yellow bold">@<%= this_user.username %></span>
                             </div>
-                            <span class="font small green">5 receitas</span>
-                            <span class="font small bold"><img src="img/icon-post-view-1.png"> receita privada</span>
+                            <span class="font small green"><%= count_recipes %> receitas</span>
+                            <span class="font small bold"><img src="/img/icon-post-view-1.png"> receita privada</span>
                         </div>
                     </div>
                     <div class="flex-column">
-                        <img class="recipes-img" src="img/pizza.jpg">
+                        <img class="recipes-img" src="<%= this_recipe.image %>">
                     </div>
                 </div>
-                <div class="view-recipes-content flex-column gap-20">
-                    <div class="recipe-title-and-favorite flex-wrap flex-row">
-                        <h2 class="font chocolate-brown very-big bold">Pizza de Queijo</h2>
-                        <div class="view-recipes-favorite">
-                            <img class="icon" src="img/star-icon.png">
+                <div class="view-recipes-content flex-column gap-40">
+                    <div class="flex-column gap-10">
+                        <div class="recipe-title-and-favorite flex-wrap flex-row">
+                            <h2 class="font chocolate-brown very-big superbold"><%= this_recipe.name %></h2>
+                            <div class="view-recipes-favorite">
+                                <img class="icon" src="/img/star-icon.png">
+                            </div>
                         </div>
-                    </div>
-                    <div class="flex-wrap">
+                        <div class="flex-wrap gap-20">
+                            <div>
+                                <img class="recipe-icon" src="/img/icon-clock-green.png">
+                                <span class="font green"><%= this_recipe.duration %></span>
+                            </div>
+                            <div>
+                                <img class="recipe-icon" src="/img/icon-portions-green.png">
+                                <span class="font green"><%= this_recipe.portions %> porções</span>
+                            </div>
+                        </div>
                         <div>
-                            <img class="icon" src="img/icon-clock-green.png">
-                            <span class="font green">1h30</span>
+                            <span class="small-box box-green white">Salgado</span>
+                            <span class="small-box box-yellow white">Quente</span>
+                            <span class="small-box box-brown white">Janta</span>
+                            <span class="small-box box-macchiato white">Almoço</span>
                         </div>
-                        <div>
-                            <img class="icon" src="img/icon-portions-green.png">
-                            <span class="font green">2 porções</span>
-                        </div>
-                    </div>
-                    <div>
-                        <span class="small-box box-green white">Salgado</span>
-                        <span class="small-box box-yellow white">Quente</span>
-                        <span class="small-box box-brown white">Janta</span>
-                        <span class="small-box box-macchiato white">Almoço</span>
                     </div>
                     <div class="justify font chocolate-brown">
-                        descrição descrição descrição descrição descrição descrição descrição descrição descrição
-                        descrição descrição descrição
-                        descrição descrição descrição descrição descrição descrição descrição descrição descrição
-                        descrição descrição descrição
-                        descrição
+                        <%= this_recipe.description %>
                     </div>
                 </div>
             </div>
             <div class="view-recipes-bottom">
                 <div class="view-recipes-ingredients flex-column">
                     <div class="recipes-ingredients-title">
-                        <img class="icon" src="img/icon-ingredients.png">
+                        <img class="icon" src="/img/icon-ingredients.png">
                         <span class="font chocolate-brown bold big">Ingredientes</span>
                     </div>
                     <div class="justify font chocolate-brown">
                         <ul>
-                            <li>Ingrediente 1</li>
-                            <li>Ingrediente 2</li>
-                            <li>Ingrediente 3</li>
-                            <li>Ingrediente 4</li>
+                            <% this_ingredients.forEach((ingredient) => { %>
+                                <li><%= ingredient.description %></li>
+                            <% }) %>
                         </ul>
                     </div>
                 </div>
+                
                 <div class="view-recipes-steps flex-column">
                     <div class="recipes-ingredients-title">
-                        <img class="icon" src="img/icon-preparation.png">
+                        <img class="icon" src="/img/icon-preparation.png">
                         <span class="font chocolate-brown bold big">Modo de Preparo</span>
                     </div>
                     <div class="justify font chocolate-brown">
