Fixed meals and recipe types pages

--- a/src/views/add_recipe_type.ejs
+++ b/src/views/add_recipe_type.ejs
@@ -55,7 +55,7 @@
             </div>
         </nav>
     </header>
-    <main class="min-100vh">
+    <main class="min-100vh center">
         <div class="edit-recipe-type">
             <div class="box gap-40">
                 <h2 class="font chocolate-brown bold big">Adicionar tipo de receita</h2>
