--- a/src/views/add_meal.ejs
+++ b/src/views/add_meal.ejs
@@ -54,7 +54,7 @@
             </div>
         </nav>
     </header>
-    <main>
+    <main class="min-100vh center">
         <div class="edit-recipe-type">
             <div class="box gap-40">
                 <h2 class="font chocolate-brown bold big">Adicionar refeição</h2>
