--- a/src/views/edit_recipe_type.ejs
+++ b/src/views/edit_recipe_type.ejs
@@ -56,7 +56,7 @@
             </div>
         </nav>
     </header>
-    <main class="min-100vh">
+    <main class="min-100vh center">
         <div class="edit-recipe-type">
             <form action="/<%= this_user.username %>/edit-recipe-type/<%= user_types.id_type %>" method="post">
                 <div class="box gap-40">
