working on edit recipe type

--- a/src/views/add_recipe.ejs
+++ b/src/views/add_recipe.ejs
@@ -51,7 +51,7 @@
                                     href="/"><span>Sair</span></a>
                             </li>
                             <li class="center">
-                                <img src="/img/icon-dark-mode-black.png" class="hover">
+                                <img class="hover" id="dark_mode_icon" src="/img/icon-dark-mode-0.png">
                             </li>
                         </ul>
                     </div>
