dark mode working when you change pages

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -59,6 +59,10 @@
     text-decoration-color: #462404;
 }
 
+.decoration-text {
+    text-decoration-color: var(--body-color);
+}
+
 /* format */
 
 .margin-zero {
