--- a/src/views/profile.ejs
+++ b/src/views/profile.ejs
@@ -73,7 +73,7 @@
 
                 <div class="gap-20">
                     <div class="flex-row gap-10 width-100 flex-start">
-                        <img class="icon-font fit-contain" src="/img/people-icon.png">
+                        <img class="icon-font fit-contain icon-color" src="/img/people-icon.png">
                         <span class="font chocolate-brown width-100"><%= user_followers %> seguidores</span>
                     </div>
                     <a href="/<%= this_user.username %>/edit-profile"><button class="width-100 smallerhover">Editar</button></a>
