--- a/public/css/view_recipes_style.css
+++ b/public/css/view_recipes_style.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     
-
+    background-color: var(--box-bg-color);
     border-radius: 20px;
     border: 2px solid #5C5E22;
 
