--- a/src/views/profile.ejs
+++ b/src/views/profile.ejs
@@ -88,7 +88,7 @@
                     <% user_types.forEach(type => { %>
                         <div class="hover">
                             <a style="background-color: <%= type.bg_color %>; color: <%= type.txt_color %>;" class="meal font bold small text-decoration-none" 
-                                href="/<%= this_user.username %>/edit-recipe-type/<%= type.id_type %>"><%= type.name %></a>
+                                href="/<%= this_user.username %>/edit-recipe-type-<%= type.id_type %>"><%= type.name %></a>
                         </div>
                     <% }) %>
                 </div>
@@ -100,7 +100,7 @@
                     <% user_meals.forEach(meal => { %>
                         <div class="hover">
                             <a style="background-color: <%= meal.bg_color %>; color: <%= meal.txt_color %>;" class="meal font bold small text-decoration-none"
-                                href="/<%= this_user.username %>/edit-meal/<%= meal.id_meal %>"><%= meal.name %></a>
+                                href="/<%= this_user.username %>/edit-meal-<%= meal.id_meal %>"><%= meal.name %></a>
                         </div>
                     <% }) %>
                 </div>
