--- a/src/views/view_recipes.ejs
+++ b/src/views/view_recipes.ejs
@@ -69,7 +69,7 @@
                                 <span class="font yellow bold">@<%= this_user.username %></span>
                             </div>
                             <span class="font small green"><%= count_recipes %> receitas</span>
-                            <span class="font small bold"><img src="/img/icon-post-view-1.png"> receita privada</span>
+                            <span class="font small bold"><img class="icon-invert" src="/img/icon-post-view-1.png"> receita privada</span>
                         </div>
                     </div>
                     <div class="flex-column">
@@ -81,7 +81,7 @@
                         <div class="recipe-title-and-favorite flex-wrap flex-row">
                             <h2 class="font chocolate-brown very-big superbold"><%= this_recipe.name %></h2>
                             <div class="view-recipes-favorite">
-                                <img class="icon" src="/img/star-icon.png">
+                                <img class="icon icon-color" src="/img/star-icon.png">
                             </div>
                         </div>
                         <div class="flex-wrap gap-20">
@@ -109,7 +109,7 @@
             <div class="view-recipes-bottom">
                 <div class="view-recipes-ingredients flex-column">
                     <div class="recipes-ingredients-title">
-                        <img class="icon" src="/img/icon-ingredients.png">
+                        <img class="icon icon-color" src="/img/icon-ingredients.png">
                         <span class="font chocolate-brown bold big">Ingredientes</span>
                     </div>
                     <div class="justify font chocolate-brown">
@@ -123,7 +123,7 @@
                 
                 <div class="view-recipes-steps flex-column">
                     <div class="recipes-ingredients-title">
-                        <img class="icon" src="/img/icon-preparation.png">
+                        <img class="icon icon-color" src="/img/icon-preparation.png">
                         <span class="font chocolate-brown bold big">Modo de Preparo</span>
                     </div>
                     <div class="justify font chocolate-brown">
@@ -145,6 +145,7 @@
             </div>
         </div>
     </main>
+    <script src="/js/dark_mode.js" defer></script>
 </body>
 
 </html>
