--- a/src/views/add_recipe.ejs
+++ b/src/views/add_recipe.ejs
@@ -64,7 +64,7 @@
             <div class="view-recipes-top flex-row">
                 <div class="view-recipes-header flex-column gap-30">
                     <div class="flex-column">
-                        <img class="recipes-img" id="imgFoto" src="/img/add-photo-image.jpg">
+                        <img class="recipes-img height-300px" id="imgFoto" src="/img/add-photo-image.jpg">
                     </div>
                     <input type="file" id="flImage" name="recipe_image" id="foto" accept="image/*" placeholder="Teste"
                         hidden>
@@ -163,8 +163,8 @@
                     </div>
                     <div class="font chocolate-brown flex-column gap-20" id="ingredients">
                         <div class="flex-row gap-20">
-                            <input name="ingredient_weight" class="width-50px" type="number" placeholder="1" min="1" required>
-                            <input name="ingredient_description" class="width-70" type="text" placeholder="Ingrediente" maxlength="255" required>
+                            <input name="ingredients[0][ingredient_weight]" class="width-50px" type="number" placeholder="1" min="1" required>
+                            <input name="ingredients[0][ingredient_description]" class="width-70" type="text" placeholder="Ingrediente" maxlength="255" required>
                         </div>
                     </div>
                     <div>
@@ -180,8 +180,8 @@
                     </div>
                     <div class="font chocolate-brown flex-column gap-20" id="steps">
                         <div class="flex-row gap-20">
-                            <input name="step_weight" class="width-50px" type="number" placeholder="1" min="1" required>
-                            <textarea name="step_description" id="" class="font" placeholder="Passo" required></textarea>
+                            <input name="steps[0][step_weight]" class="width-50px" type="number" placeholder="1" min="1" required>
+                            <textarea name="steps[0][step_description]" id="" class="font" placeholder="Passo" required></textarea>
                         </div>
                     </div>
                     <div>
