--- a/src/views/edit_recipes.ejs
+++ b/src/views/edit_recipes.ejs
@@ -23,9 +23,9 @@
     <link rel="stylesheet" type="text/css" href="/css/sign_style.css">
     <link rel="stylesheet" type="text/css" href="/css/edit_recipes_style.css">
 
-
-    <link rel="stylesheet" type="text/css" href="css/style.css">
-    <title>Editar Receita</title>
+    <link rel="stylesheet" type="text/css" href="/css/header_style.css">
+    <link rel="stylesheet" type="text/css" href="/css/style.css">
+    <title>Editar <%= this_recipe.name %></title>
 </head>
 
 <body>
@@ -33,7 +33,7 @@
         <nav class="header navbar navbar-expand-lg">
             <div class="container-fluid padding-zero">
                 <div class="menu">
-                    <a class="padding-zero margin-zero" href="/home"><img src="/img/logo-white-green.png"
+                    <a class="padding-zero margin-zero hover" href="/<%= this_user.username %>/home"><img src="/img/logo-white-green.png"
                             class="logo-icon"></a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                         data-bs-target="#navbarContent" aria-controls="navbarContent" aria-expanded="false"
@@ -42,13 +42,13 @@
                     </button>
                 </div>
                 <span class="center">
-                    <div class="collapse navbar-collapse center" id="navbarContent" style="">
+                    <div class="collapse navbar-collapse center" id="navbarContent">
                         <ul class="flex-row gap-20 padding-zero margin-zero">
                             <li class="center">
-                                <a class="font chocolate-brown superbold no-decoration" href="/"><span>Sair</span></a>
+                                <a class="font chocolate-brown superbold no-decoration hover" href="/"><span>Sair</span></a>
                             </li>
                             <li class="center">
-                                <img src="img/icon-dark-mode-black.png">
+                                <img class="hover" id="dark_mode_icon" src="/img/icon-dark-mode-0.png">
                             </li>
                         </ul>
                     </div>
@@ -57,28 +57,28 @@
         </nav>
     </header>
     <main>
-        <form class="recipes-box gap-40">
+        <form action="/<%= this_user.username %>/edit-recipes-<%= this_recipe.id_recipe %>" method="post" enctype="multipart/form-data" class="recipes-box gap-40">
             <div class="view-recipes-top flex-row">
                 <div class="view-recipes-header flex-column gap-30">
                     <div class="flex-column">
-                        <img class="recipes-img" id="imgFoto" src="img/pizza.jpg">
+                        <img class="recipes-img height-300px" id="imgFoto" src="<%= this_recipe.image %>">
                     </div>
-                    <input type="file" id="flImage" name="foto" id="foto" accept="image/*" placeholder="Teste" hidden>
+                    <input type="file" id="flImage" name="recipe_image" id="foto" accept="image/*" placeholder="Teste" hidden>
                 </div>
-                <div class="view-recipes-content flex-column gap-20">
+                <div class="view-recipes-content flex-column gap-20 space-between">
                     <div class="recipe-title-and-favorite flex-row">
-                        <input type="text" placeholder="Título" required>
+                        <input class="font bold" type="text" name="recipe_name" value="<%= this_recipe.name %>" required>
                     </div>
                     <div class="recipe-info">
                         <div class="flex-row">
-                            <img class="icon" src="img/icon-clock-green.png">
-                            <input type="text" placeholder="01:30" required>
+                            <img class="icon" src="/img/icon-clock-green.png">
+                            <input type="text" name="recipe_duration" value="<%= this_recipe.duration %>" required>
                         </div>
                         <div class="flex-row">
-                            <img class="icon" src="img/icon-portions-green.png">
-                            <input type="number" placeholder="2" min="1" required>
+                            <img class="icon" src="/img/icon-portions-green.png">
+                            <input type="number" name="recipe_portions" value="<%= this_recipe.portions %>" min="1" required>
                         </div>
-                        <img class="icon" id="post_view_setting" src="img/icon-post-view-1-bigger.png"
+                        <img class="icon" id="post_view_setting" src="/img/icon-post-view-1-bigger.png"
                             alt="Vizualização do post">
                     </div>
                     <div class="recipe-types">
@@ -90,7 +90,7 @@
                                 <span class="small-box box-macchiato white">Almoço</span>
                             </div>
                             <div class="recipe-type-add">
-                                <img class="icon" src="img/plus-icon.png" data-bs-toggle="modal"
+                                <img class="icon" src="/img/plus-icon.png" data-bs-toggle="modal"
                                     data-bs-target="#types_meals">
                             </div>
                         </div>
@@ -155,52 +155,53 @@
                         </div>
                     </div>
                     <div class="recipe-description font chocolate-brown">
-                        <textarea name="description" id="" maxlength="255" required>descrição descrição descrição descrição descrição descrição descrição descrição descrição descrição descrição descrição descrição descrição descrição descrição descrição descrição descrição descrição descrição descrição descrição descrição descrição descrição descrição descrição descrição descrição descrição descrição descrição descrição descrição descrição descrição descrição descrição descrição descrição descrição descrição descrição descrição descrição descrição descrição
-                        </textarea>
+                        <textarea name="recipe_description" id="" maxlength="255" required><%= this_recipe.description %></textarea>
                     </div>
                 </div>
             </div>
             <div class="edit-recipes-bottom gap-40">
                 <div class="view-recipes-ingredients flex-column gap-20">
                     <div class="recipes-ingredients-title">
-                        <img class="icon" src="img/icon-ingredients.png">
+                        <img class="icon" src="/img/icon-ingredients.png">
                         <span class="font chocolate-brown bold big">Ingredientes</span>
                     </div>
                     <div class="font chocolate-brown flex-column gap-20 width-100 " id="ingredients">
-                        <div class="flex-row gap-20">
-                            <input class= "width-50px" type="number" placeholder="1" min="1" required>
-                            <input class= "width-70" type="text" placeholder="Ingrediente" maxlength="255" required>
-                        </div>
-                        
+                        <% this_ingredients.forEach((ingredient, index) => { %>
+                            <div class="flex-row gap-20">
+                                <input name="ingredients[<%= index %>][ingredient_weight]" class="width-50px" type="number" placeholder="1" min="1" value="<%= ingredient.weight %>" required>
+                                <input name="ingredients[<%= index %>][ingredient_description]" class="width-70" type="text" placeholder="Ingrediente" maxlength="255" value="<%= ingredient.description %>" required>
+                            </div>
+                        <% }); %>
                     </div>
                     <div>
-                        <img class="icon" src="img/icon-delete.png">
-                        <img class="icon" id="add_input_button" src="img/plus-icon.png">
+                        <img class="icon" src="/img/icon-delete.png">
+                        <img class="icon" id="add_input_button" src="/img/plus-icon.png">
                         <span class="yellow font bold small">Adicionar ingrediente</span>
                     </div>
                 </div>
                 <div class="view-recipes-steps flex-column gap-20">
                     <div class="recipes-ingredients-title">
-                        <img class="icon" src="img/icon-preparation.png">
+                        <img class="icon" src="/img/icon-preparation.png">
                         <span class="font chocolate-brown bold big">Modo de Preparo</span>
                     </div>
                     <div class="font chocolate-brown flex-column gap-20" id="steps">
-                        <div class="flex-row gap-20">
-                            <input class= "width-50px" type="number" placeholder="1" min="1" required>
-                            <textarea name="" id=""
-                                required>Passo 1 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium magni odio aliquid assumenda iurhtrhrytrye repudiandae dignissimos, sint, vitae obcaecati voluptate corrupti quas soluta, unde eveniet excepturi debitis sed quo rerum?</textarea>
-                        </div>
+                        <% this_steps.forEach((step, index) => { %>
+                            <div class="flex-row gap-20">
+                                <input name="steps[<%= index %>][step_weight]" class="width-50px" type="number" placeholder="1" min="1" required value="<%= step.weight %>">
+                                <textarea name="steps[<%= index %>][step_description]" id="" class="font" placeholder="Passo" required><%= step.description %></textarea>
+                            </div>
+                        <% }); %>
                     </div>
                     <div>
-                        <img class="icon" src="img/icon-delete.png">
-                        <img class="icon" id="add_textarea_button" src="img/plus-icon.png">
+                        <img class="icon" src="/img/icon-delete.png">
+                        <img class="icon" id="add_textarea_button" src="/img/plus-icon.png">
                         <span class="yellow font bold small">Adicionar modo de preparo</span>
                     </div>
                 </div>
             </div>
             <div class="view-recipes-button">
                 <div class="edit-button">
-                    <button>Salvar</button>
+                    <button type="submit">Salvar</button>
                 </div>
             </div>
         </form>
