--- a/src/views/view_recipes.ejs
+++ b/src/views/view_recipes.ejs
@@ -25,7 +25,7 @@
     <link rel="stylesheet" type="text/css" href="/css/style.css">
     <link rel="stylesheet" type="text/css" href="/css/header_style.css">
     <link rel="stylesheet" type="text/css" href="/css/recipe_style.css">
-
+    <script defer src="/js/script.js"></script>
     <title><%= this_recipe.name %></title>
 </head>
 
@@ -62,11 +62,11 @@
             <div class="view-recipes-top">
                 <div class="view-recipes-header flex-column gap-30">
                     <div class="header-info flex-row gap-20">
-                        <img class="view-recipes-profile-img rounded-circle" src="<%= this_user.image %>">
+                        <a href="/<%= this_user.username %>/profile"><img class="view-recipes-profile-img rounded-circle hover" src="<%= this_user.image %>"></a>
                         <div class="flex-column">
                             <div class="view-recipes-username flex-row gap-10 flex-wrap">
-                                <span class="font chocolate-brown superbold big"><%= this_user.name %></span>
-                                <span class="font yellow bold">@<%= this_user.username %></span>
+                                <a href="/<%= this_user.username %>/profile" class="font chocolate-brown superbold big no-decoration smallerhover"><%= this_user.name %></a>
+                                <a href="/<%= this_user.username %>/profile" class="font yellow bold no-decoration hover">@<%= this_user.username %></a>
                             </div>
                             <span class="font small green"><%= count_recipes %> receitas</span>
                             <span class="font small bold"><img src="/img/icon-post-view-1.png"> receita privada</span>
@@ -101,46 +101,48 @@
                             <span class="small-box box-macchiato white">Almoço</span>
                         </div>
                     </div>
-                    <div class="justify font chocolate-brown">
+                    <div class="justify font chocolate-brown" style="word-wrap: break-word;">
                         <%= this_recipe.description %>
                     </div>
                 </div>
             </div>
             <div class="view-recipes-bottom">
-                <div class="view-recipes-ingredients flex-column">
+                <div class="view-recipes-ingredients flex-column gap-20">
                     <div class="recipes-ingredients-title">
                         <img class="icon" src="/img/icon-ingredients.png">
                         <span class="font chocolate-brown bold big">Ingredientes</span>
                     </div>
-                    <div class="justify font chocolate-brown">
-                        <ul>
+                    <div class="justify font chocolate-brown" >
+                        <ul  style="word-wrap: break-word;">
                             <% this_ingredients.forEach((ingredient) => { %>
-                                <li><%= ingredient.description %></li>
+                                <li ><%= ingredient.description %></li>
                             <% }) %>
                         </ul>
                     </div>
                 </div>
                 
-                <div class="view-recipes-steps flex-column">
+                <div class="view-recipes-steps flex-column gap-20">
                     <div class="recipes-ingredients-title">
                         <img class="icon" src="/img/icon-preparation.png">
                         <span class="font chocolate-brown bold big">Modo de Preparo</span>
                     </div>
                     <div class="justify font chocolate-brown">
-                        <ul>
-                            <li>Passo 1 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium magni odio
-                                aliquid assumenda iurhtrhrytrye repudiandae dignissimos, sint, vitae obcaecati voluptate
-                                corrupti quas soluta, unde eveniet excepturi debitis sed quo rerum?</li>
-                            <li>Passo 2</li>
-                            <li>Passo 3</li>
-                            <li>Passo 4</li>
+                        <ul  style="word-wrap: break-word;">
+                            <% this_steps.forEach((step) => { %>
+                                <li ><%= step.description %></li>
+                            <% }) %>
                         </ul>
                     </div>
                 </div>
             </div>
             <div class="view-recipes-button">
+                <form action="/<%= this_user.username %>/view-recipes-<%= this_recipe.id_recipe %>" method="post">
+                    <button type="submit">excluir</button>
+                </form>
+                
+                <!-- <img src="/img/icon-delete.png" class="100% hover" id="delete-recipe" data-recipe-id="<%= this_recipe.id_recipe %>" data-username="<%= this_user.username %>"> -->
                 <div class="edit-button">
-                    <a href="../edit-recipes"><button>Editar</button></a>
+                    <a href="/<%= this_user.username %>/edit-recipes-<%= this_recipe.id_recipe %>"><button class="hover">Editar</button></a>
                 </div>
             </div>
         </div>
