--- a/public/css/style.css
+++ b/public/css/style.css
@@ -20,6 +20,10 @@
     --day-off-color: #161515;
 }
 
+.no-bg {
+    background-color: transparent;
+}
+
 .icon-color {
     filter: var(--icons-brightness) var(--icons-saturation);
 }
