--- a/src/views/view_recipes.ejs
+++ b/src/views/view_recipes.ejs
@@ -136,11 +136,12 @@
                 </div>
             </div>
             <div class="view-recipes-button">
-                <form action="/<%= this_user.username %>/view-recipes-<%= this_recipe.id_recipe %>" method="post">
-                    <button type="submit">excluir</button>
+                <form action="/<%= this_user.username %>/view-recipes-<%= this_recipe.id_recipe %>" method="post" class="flex-start flex-row">
+                    <button type="submit" class="no-bg">
+                        <img src="/img/icon-delete.png" class="100% hover" id="delete-recipe" data-recipe-id="<%= this_recipe.id_recipe %>" data-username="<%= this_user.username %>">
+                    </button>
                 </form>
                 
-                <!-- <img src="/img/icon-delete.png" class="100% hover" id="delete-recipe" data-recipe-id="<%= this_recipe.id_recipe %>" data-username="<%= this_user.username %>"> -->
                 <div class="edit-button">
                     <a href="/<%= this_user.username %>/edit-recipes-<%= this_recipe.id_recipe %>"><button class="hover">Editar</button></a>
                 </div>
