working on adding types and meals do recipe

--- a/src/views/view_recipes.ejs
+++ b/src/views/view_recipes.ejs
@@ -138,7 +138,7 @@
             <div class="view-recipes-button">
                 <form action="/<%= this_user.username %>/view-recipes-<%= this_recipe.id_recipe %>" method="post" class="flex-start flex-row">
                     <button type="submit" class="no-bg">
-                        <img src="/img/icon-delete.png" class="100% hover" id="delete-recipe" data-recipe-id="<%= this_recipe.id_recipe %>" data-username="<%= this_user.username %>">
+                        <img src="/img/icon-delete.png" class="100% hover icon-color" id="delete-recipe" data-recipe-id="<%= this_recipe.id_recipe %>" data-username="<%= this_user.username %>">
                     </button>
                 </form>
                 
