--- a/src/views/add_recipe.ejs
+++ b/src/views/add_recipe.ejs
@@ -105,7 +105,7 @@
                                                 <div class="row row-cols-1 row-cols-md-3" id="meals">
                                                     <% user_meals.forEach(meal => { %>
                                                         <div class="col center gap-10">
-                                                            <input type="checkbox" name="" value="<%= meal.id_meal %>">
+                                                            <input type="checkbox" name="meal_id" value="<%= meal.id_meal %>">
                                                             <label style="background-color: <%= meal.bg_color %>; color: <%= meal.txt_color %>;" 
                                                                 class="meal font bold small text-decoration-none"><%= meal.name %></label>
                                                         </div>
@@ -117,7 +117,7 @@
                                                 <div class="row row-cols-1 row-cols-md-3" id="types">
                                                     <% user_types.forEach(type => { %>
                                                         <div class="col center gap-10">
-                                                            <input type="checkbox" name="<%= type.id_type %>" >
+                                                            <input type="checkbox" name="type_id" value="<%= type.id_type %>" >
                                                             <label style="background-color: <%= type.bg_color %>; color: <%= type.txt_color %>;" 
                                                                 class="meal font bold small text-decoration-none"><%= type.name %></label>
                                                         </div>
