Edit recipe ingredientsand steps is finally working

--- a/src/views/edit_recipes.ejs
+++ b/src/views/edit_recipes.ejs
@@ -174,7 +174,7 @@
                         <% }); %>
                     </div>
                     <div>
-                        <img class="icon" src="/img/icon-delete.png">
+                        <img class="icon icon-color" src="/img/icon-delete.png">
                         <img class="icon" id="add_input_button" src="/img/plus-icon.png">
                         <span class="yellow font bold small">Adicionar ingrediente</span>
                     </div>
@@ -193,7 +193,7 @@
                         <% }); %>
                     </div>
                     <div>
-                        <img class="icon" src="/img/icon-delete.png">
+                        <img class="icon icon-color" src="/img/icon-delete.png">
                         <img class="icon" id="add_textarea_button" src="/img/plus-icon.png">
                         <span class="yellow font bold small">Adicionar modo de preparo</span>
                     </div>
