--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -71,10 +71,10 @@
                             <span class="font green small"><%= count_recipes %> receitas</span>
                         </div>
                         <div class="profile-text">
-                            <div class="followers">
+                            <!-- <div class="followers">
                                 <img class="icon-color" src="/img/people-icon.png">
                                 <span class="font chocolate-brown small"><%= user_followers %> seguidores</span>
-                            </div>
+                            </div> -->
                             <a class="white text-decoration-none width-100" href="/<%= this_user.username %>/profile"><button class="button small bold hover width-100">Visualizar</button></a>
                         </div>
                     </div>
