--- a/src/views/edit_profile.ejs
+++ b/src/views/edit_profile.ejs
@@ -63,7 +63,7 @@
                     <input type="file" id="flImage" name="user_image" id="foto" accept="image/*" placeholder="Teste" hidden>
                 </div>
                 <div class="flex-column gap-20 width-100 padding-3">
-                    <input class="font small" type="text" name="user_name" value="<%= this_user.name %>" required>
+                    <input class="font bold" type="text" name="user_name" value="<%= this_user.name %>" required>
                     <textarea class="font small" name="user_description"><%= this_user.description %></textarea>
                     <input type="email" value="<%= this_user.email %>" name="user_email" required>
                     <input type="date" value="<%= this_user.birthdate %>" name="user_birthdate" required>
