--- a/src/views/edit_recipes.ejs
+++ b/src/views/edit_recipes.ejs
@@ -70,16 +70,12 @@
                         <input class="font bold" type="text" name="recipe_name" value="<%= this_recipe.name %>" required>
                     </div>
                     <div class="recipe-info">
-                        <div class="flex-row">
                             <img class="icon" src="/img/icon-clock-green.png">
                             <input type="text" name="recipe_duration" value="<%= this_recipe.duration %>" required>
-                        </div>
-                        <div class="flex-row">
                             <img class="icon" src="/img/icon-portions-green.png">
                             <input type="number" name="recipe_portions" value="<%= this_recipe.portions %>" min="1" required>
-                        </div>
-                        <img class="icon icon-invert" id="post_view_setting" src="/img/icon-post-view-1-bigger.png"
-                            alt="Vizualização do post">
+                        <!-- <img class="icon icon-invert" id="post_view_setting" src="/img/icon-post-view-1-bigger.png"
+                            alt="Vizualização do post"> -->
                     </div>
                     <div class="recipe-types">
                         <div class="flex-wrap flex-row space-between">
