--- a/src/views/view_recipes.ejs
+++ b/src/views/view_recipes.ejs
@@ -69,7 +69,7 @@
                                 <a href="/<%= this_user.username %>/profile" class="font yellow bold no-decoration hover">@<%= this_user.username %></a>
                             </div>
                             <span class="font small green"><%= count_recipes %> receitas</span>
-                            <span class="font small bold"><img class="icon-invert" src="/img/icon-post-view-1.png"> receita privada</span>
+                            <!-- <span class="font small bold"><img class="icon-invert" src="/img/icon-post-view-1.png"> receita privada</span> -->
                         </div>
                     </div>
                     <div class="flex-column">
