Working on the add-recipes page to as=dd type and meals

--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -58,7 +58,7 @@
         <div class="section">
             <aside>
                 <form action="">
-                    <input class="width-100" type="text" name="" id="search_bar" class="box"
+                    <input class="width-100 font small" type="text" name="" id="search_bar" class="box"
                         placeholder="Pesquisar em suas receitas">
                     <a href=""><img src="/img/filter-icon.png" class="hover icon-color"></a>
                 </form>
